--- a/lalaю.html
+++ b/lalaю.html
@@ -7,26 +7,27 @@
       body {
         margin: 0;
         font-family: Arial, sans-serif;
-        background-color: #ffd9d9;
+        background-color: #fdf8e8;
+        color: #333333;
       }
 
       /* Header */
       .header {
-        background-color: #102b1f;
-        color: #ffd9d9;
+        background-color: #ce8884;
+        color: #ffffff;
         padding: 20px;
         text-align: center;
       }
 
       /* Navigation */
       .nav {
-        background-color: #bd7880;
+        background-color: #bed5ae;
         text-align: center;
         padding: 10px;
       }
       .nav a {
-        background-color: #4d0011;
-        color: #ffd9d9;
+        background-color: #ce8884;
+        color: #ffffff;
         text-decoration: none;
         padding: 10px 18px;
         display: inline-block;
@@ -35,26 +36,26 @@
         transition: 0.3s;
       }
       .nav a:hover {
-        background-color: #ffd9d9;
-        color: #4d0011;
+        background-color: #fbd3c4;
+        color: #333333;
       }
 
       /* Sidebar & Content */
       .sidebar {
         float: left;
         width: 25%;
-        background-color: #ffd9d9;
-        padding: 10px 1px 10px 10px;
-        border-right: 3px solid #bd7880;
+        background-color: #fbd3c4;
+        padding: 15px;
+        border-right: 3px solid #bed5ae;
         box-sizing: border-box;
         min-height: 400px;
       }
       .content {
         float: right;
         width: 70%;
-        background-color: #fff;
+        background-color: #ffffff;
         padding: 15px;
-        border-left: 3px solid #bd7880;
+        border-left: 3px solid #bed5ae;
         box-sizing: border-box;
         min-height: 400px;
       }
@@ -62,8 +63,8 @@
       /* Footer */
       .footer {
         clear: both;
-        background-color: #bd7880;
-        color: #102b1f;
+        background-color: #ce8884;
+        color: #ffffff;
         text-align: center;
         padding: 12px;
         margin-top: 20px;
@@ -78,27 +79,27 @@
       }
       th,
       td {
-        border: 1px solid #4d0011;
+        border: 1px solid #ce8884;
         padding: 8px;
         text-align: center;
       }
       th {
-        background-color: #bd7880;
-        color: #fff;
+        background-color: #bed5ae;
+        color: #333333;
       }
       tr:nth-child(even) {
-        background-color: #ffd9d9;
+        background-color: #fbd3c4;
       }
       .highlight-row {
-        background-color: #4d0011 !important;
-        color: #ffd9d9;
+        background-color: #ce8884 !important;
+        color: #ffffff;
       }
 
       /* Form Styling */
       .form-container {
         width: 60%;
         margin: 20px auto;
-        background-color: #ffd9d9;
+        background-color: #fbd3c4;
         padding: 20px;
         border-radius: 10px;
         box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
@@ -107,7 +108,7 @@
         font-weight: bold;
         display: block;
         margin-top: 10px;
-        color: #4d0011;
+        color: #333333;
       }
       .form-container input,
       .form-container select,
@@ -116,14 +117,14 @@
         padding: 8px;
         margin-top: 5px;
         border-radius: 6px;
-        border: 1px solid #bd7880;
+        border: 1px solid #ce8884;
       }
       .form-container input[type="radio"] {
         width: auto;
       }
       .form-container input[type="submit"] {
-        background-color: #4d0011;
-        color: #ffd9d9;
+        background-color: #ce8884;
+        color: #ffffff;
         padding: 10px 16px;
         border: none;
         border-radius: 6px;
@@ -132,8 +133,8 @@
         transition: 0.3s;
       }
       .form-container input[type="submit"]:hover {
-        background-color: #bd7880;
-        color: #102b1f;
+        background-color: #bed5ae;
+        color: #333333;
       }
 
       /* Wireframe section */
@@ -143,7 +144,7 @@
         grid-gap: 10px;
         background-color: #fff;
         padding: 20px;
-        border: 2px dashed #4d0011;
+        border: 2px dashed #ce8884;
         margin: 20px auto;
         width: 80%;
         text-align: center;
@@ -152,17 +153,17 @@
       .wire-nav,
       .wire-main,
       .wire-footer {
-        border: 2px solid #bd7880;
+        border: 2px solid #bed5ae;
         display: flex;
         align-items: center;
         justify-content: center;
         font-weight: bold;
-        color: #4d0011;
+        color: #333333;
       }
 
       img {
         max-width: 100%;
-        border: 3px solid #bd7880;
+        border: 3px solid #bed5ae;
         border-radius: 10px;
       }
     </style>
@@ -171,10 +172,7 @@
     <!-- Header -->
     <div class="header">
       <h1>Laura MT2404</h1>
-      <p>
-        Today I feel really happy 😄, a little bit tired 😴, but also excited
-        about learning web programing 🤩
-      </p>
+      <p>Frontend Development Assignment</p>
     </div>
 
     <!-- Navigation -->
@@ -194,29 +192,19 @@
           <li>Dogs</li>
           <li>Goats</li>
         </ul>
-        <h2>favorite websites</h2>
-        <ul>
-          <li>pinterest</li>
-          <li>youtube</li>
-          <li>google</li>
-          <li>spotify</li>
-        </ul>
-
-        <h2>my hobbies</h2>
-        <ol>
-          <li>Gym</li>
-          <li>Cooking</li>
-          <li>Fashion and style</li>
-          <li>Tutor children in math</li>
-        </ol>
       </div>
+
       <div class="content">
         <h2>Main Content</h2>
-        <p>main cotent lalameowmeowmeow</p>
+        <p>
+          This is the main content area for Task 1. Layout built using div +
+          floats (no Flexbox/Grid).
+        </p>
         <img
           src="https://i.pinimg.com/736x/f7/d4/c1/f7d4c10871362576d1eef70a08781591.jpg"
           alt="me"
         />
+        <p>meowmeow</p>
       </div>
 
       <div class="footer">
@@ -248,11 +236,13 @@
         <li>Blending retro Americana with modern themes.</li>
       </ul>
       <img
-        src="https://i.pinimg.com/736x/c9/a2/d8/c9a2d857d11763987745aa9fa3746369.jpg"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Lana_Del_Rey_@_Grammy_Museum_2019_%2849056820782%29.jpg/440px-Lana_Del_Rey_@_Grammy_Museum_2019_%2849056820782%29.jpg"
         alt="Lana Del Rey portrait"
-        width="300"
       />
-      <p><a href="https://www.lanadelrey.com/">Official Website</a> |</p>
+      <p>
+        <a href="https://www.lanadelrey.com/">Official Website</a> |
+        <a href="https://en.wikipedia.org/wiki/Lana_Del_Rey">Wikipedia</a>
+      </p>
       <button
         onclick="window.location.href='https://en.wikipedia.org/wiki/Lana_Del_Rey'"
       >
@@ -320,38 +310,30 @@
     </div>
 
     <!-- Task 4 -->
-    <div id="task4" style="padding: 0px">
+    <div id="task4" style="padding: 20px">
       <h2>Midterm Project Wireframe</h2>
-      <img
-        src="https://i.pinimg.com/1200x/a7/5b/61/a75b61f5dd541139d5cc01706c34fdf6.jpg"
-        alt="1page"
-        width="1300"
-      />
-      <p>1st page: Home</p>
-      <img
-        src="https://i.pinimg.com/736x/c0/de/44/c0de44a62121d4577b3a761d46d19526.jpg"
-        alt="2page"
-        width="1300"
-      />
-      <p>2nd page: Products</p>
-      <img
-        src="https://i.pinimg.com/736x/a6/c2/29/a6c229717866c75f94905741249790fe.jpg"
-        alt="3page"
-        width="1300"
-      />
-      <p>3rd page: About</p>
-      <img
-        src="https://i.pinimg.com/736x/15/ed/5c/15ed5c3e6ab5ea302afbbd1cfdedc5ec.jpg"
-        alt="4page"
-        width="1300"
-      />
-      <p>4th page: Contacts</p>
-      <img
-        src="https://i.pinimg.com/736x/6e/7c/52/6e7c52aed263b319774f1d7eb3156372.jpg"
-        alt="5page"
-        width="1300"
-      />
-      <p>5th page: Cart</p>
+      <p>
+        Topic: Portfolio Website. This website will showcase personal projects,
+        skills, and contact information. Target users are potential employers
+        and collaborators. The purpose is to present a professional online
+        presence.
+      </p>
+
+      <div class="wireframe">
+        <div class="wire-header">Header (Logo + Nav)</div>
+        <div class="wire-nav">Navigation</div>
+        <div class="wire-main">Main Content</div>
+        <div class="wire-footer">Footer</div>
+      </div>
+
+      <h3>Sitemap</h3>
+      <ul>
+        <li>Home</li>
+        <li>About Me</li>
+        <li>Projects</li>
+        <li>Blog</li>
+        <li>Contact</li>
+      </ul>
     </div>
   </body>
 </html>
